--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ sqlalchemy = "^2.0.34"
 pydantic = {extras = ["email"], version = "^2.9.1"}
 cryptography = "^43.0.1"
 alembic = "^1.13.2"
+bcrypt = "^4.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
