--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ readme = "README.md"
 python = "^3.12"
 typer = "^0.12.5"
 sqlalchemy = "^2.0.34"
-pydantic = {extras = ["email"], version = "^2.9.1"}
+pydantic = "^2.9.1"
 cryptography = "^43.0.1"
 alembic = "^1.13.2"
-bcrypt = "^4.2.0"
+argon2-cffi = "^23.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
