--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ radon = "^6.0.1"
 bandit = "^1.7.9"
 
 [tool.poetry.scripts]
-blindage = "blindage.cli:app"
+blindage = "blindage.cli.app:app"
 
 [build-system]
 requires = ["poetry-core"]
